# usb-lcd-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  channel_pulse.py  discord_monitor.py  docker-compose.yml  homelab_monitor.py  pomodoro.py  pyproject.toml  requirements.txt  shared.py  steam_random.py  transition.py  web_controller.py  zima_monitor.py
homelab_monitor/: __init__.py  remote.py  stats.py  ui.py
lcd/: __init__.py  constants.py  drawing.py  helpers.py  screen.py
